Don's edits (started)

--- a/manuscripts/23-tutorial-don-dags/causal-tutorial-env.qmd
+++ b/manuscripts/23-tutorial-don-dags/causal-tutorial-env.qmd
@@ -1,7 +1,7 @@
 ---
 title: "Causal Inference in Environmental Psychology: Through The Looking Glass of Counterfactual Data Science"
 abstract: |
-   Quantifying causal effects from observational data presents substantial challenges for environmental psychologists because the correlations obtained from observational settings are misleading causal guides. However, recent progress in methods for causal inference brings hope for transforming observational data into causal understanding. To clarify the assumptions under which we may obtain causal understanding from observational data, we provide an accessible introduction to the potential outcomes framework of causal inference. To help researchers better identify causation, we explain within this framework of assumptions how to use causal Directed Acyclic Graphs (DAGs). We conclude with practical guidelines for data collection and modelling, reviewing "tips" and "common pitfalls."  This chapter will interest environmental psychologists, and indeed any human scientist, who always wanted to learn about causal inference but never thought they could. 
+  Quantifying causal effects from observational data presents substantial challenges for environmental psychology researchers.  because the correlations obtained from observational settings can be misleading causal guides. However, recent progress in methods for causal inference brings hope for transforming observational data into causal understanding. In this chapter, we provide an accessible introduction to the Potential Outcomes Framework of causal inference and Directed Acyclic Graphs (DAGs), two tools to help researchers better identify when causation is and is not present We conclude with practical guidelines for data collection and modelling, highlighting “tips” and “common pitfalls.” This chapter will interest and utility to environmental psychology researchers  who wish to draw stronger causal inferences from data derived from non-experimental research designs.
 authors: 
   - name: Donald W Hine
     orcid: 0000-0002-3905-7026
@@ -20,11 +20,6 @@ authors:
       city: Wellington
       country: New Zealand
       url: www.wgtn.ac.nz/cacr
-execute:
-  warning: false
-  eval: true
-  echo: false
-  include: true
 keywords:
   - DAGS
   - Causal Inference
@@ -42,15 +37,50 @@ format:
     classoption: [singlecolumn]
     lof: false
     lot: false
-    geometry: "top=30mm, left=20mm, heightrounded"
+    number-depth: 4
+    geometry:
+      - top=30mm
+      - left=20mm
+      - heightrounded
     include-in-header:
        - text: |
            \usepackage{cancel}
+           \usepackage{xcolor}
+           \usepackage{amsmath}
+           \usepackage{hyperref}
+           \usepackage[noblocks]{authblk}
+           \renewcommand*{\Authsep}{, }
+           \renewcommand*{\Authand}{, }
+           \renewcommand*{\Authands}{, }
+           \renewcommand\Affilfont{\small}
+           \usepackage[noblocks]{authblk}
+           \usepackage{tikz}
+           \usetikzlibrary{arrows}
+           \usetikzlibrary{shapes}
+           \renewcommand{\rightarrow}{\tikz[baseline=-0.5ex] \draw[-latex] (0,0) -- (0.5,0);}
+           \renewcommand{\to}{\rightarrow}
+           \renewcommand{\leftarrow}{\tikz[baseline=-0.5ex] \draw[latex-] (0,0) -- (0.5,0);}
+           \newcommand{\rightarrowblue}{\textcolor{blue}{\rightarrow}}
+           \newcommand{\leftarrowblue}{\textcolor{blue}{\leftarrow}}
+           \newcommand{\rightarrowred}{\textcolor{red}{\rightarrow}}
+           \newcommand{\leftarrowred}{\textcolor{red}{\leftarrow}}
+           \newcommand{\rightarrowdotted}{\tikz[baseline=-0.5ex] \draw[dashed, -latex] (0,0) -- (0.5,0);}
+           \newcommand{\rightarrowdottedred}{\tikz[baseline=-0.5ex] \draw[red, dashed, -latex] (0,0) -- (0.5,0);}
+           \newcommand{\dottedleftarrowred}{\tikz[baseline=-0.5ex] \draw[red, dashed, latex-] (0,0) -- (0.5,0);}
+           \newcommand*\circleblue[1]{\tikz[baseline=(char.base)]{\node[shape=circle, draw=blue!100,inner sep=2pt,fill=blue!10, dotted] (char) {#1};}}
+           \newcommand*\circled[1]{\tikz[baseline=(char.base)]{
+            \node[shape=circle,draw=blue!100, dotted,inner sep=2pt] (char) {#1};}}
+           \newcommand*\boxedblue[1]{\tikz[baseline=(char.base)]{
+            \node[shape=rectangle,draw=blue!100,inner sep=2pt,fill=blue!10] (char) {#1};}}
 date: last-modified
-csl: camb-a.csl
-editor: 
-  markdown: 
-    wrap: sentence
+execute:
+  echo: false
+  warning: false
+  include: true
+  eval: true
+fontfamily: libertinus
+bibliography: /Users/joseph/GIT/templates/bib/references.bib
+csl: ./camb-a.csl
 ---
 
 ```{r}
