--- a/manuscripts/23-tutorial-don-dags/causal-tutorial-env.tex
+++ b/manuscripts/23-tutorial-don-dags/causal-tutorial-env.tex
@@ -205,26 +205,30 @@ Glass of Counterfactual Data Science}
 \maketitle
 \begin{abstract}
 Quantifying causal effects from observational data presents substantial
-challenges for environmental psychology researchers. because the
+challenges for environmental psychology researchers because the
 correlations obtained from observational settings can be misleading
-causal guides. However, recent progress in methods for causal inference
-brings hope for transforming observational data into causal
-understanding. In this chapter, we provide an accessible introduction to
-the Potential Outcomes Framework of causal inference and Directed
-Acyclic Graphs (DAGs), two tools to help researchers better identify
-when causation is and is not present We conclude with practical
-guidelines for data collection and modelling, highlighting ``tips'' and
-``common pitfalls.'' This chapter will interest and utility to
-environmental psychology researchers who wish to draw stronger causal
-inferences from data derived from non-experimental research designs.
+causal guides. Recent progress in methods for causal inference brings
+hope for transforming observational data into causal understanding. In
+this chapter, we provide an accessible introduction to the Potential
+Outcomes Framework of causal inference and Directed Acyclic Graphs
+(DAGs), two tools to help researchers better identify when causation is
+and is not present. We conclude with practical guidelines for data
+collection and modelling, highlighting ``tips'' and ``common pitfalls.''
+This chapter will interest environmental psychology researchers who wish
+to draw stronger causal inferences from data derived from
+non-experimental research designs.
 \end{abstract}
 \subsection{Introduction}\label{introduction}
 
-Correlation does not imply causation. However, quantifying a causal
-effect requires drawing inferences from correlations present in the
-data. It can be no other way because statistical models produce measures
-of association, i.e., correlations. And to quantify effects we must
-apply statistical models.
+Causal inference involves using empirical observations to draw
+conclusions about the causal relationships between variables or events.
+It typically involves determining whether changes in one or more
+independent variables are linked to changes in one or more dependent
+variables, while controlling for potential confounding factors. The aim
+of causal inference is to identify cause-effect relationships with a
+high level of confidence, understanding the mechanisms underlying these
+relationships, while ruling out plausible alternative explanations
+(\citeproc{ref-cook2002experimental}{Cook \emph{et al.} 2002})
 
 In experimental settings, quantitative causal inferences from
 associational models is made possible through randomisation, controlled
@@ -1791,6 +1795,11 @@ Cole, SR, Platt, RW, Schisterman, EF, \ldots{} Poole, C (2010)
 Illustrating bias due to conditioning on a collider. \emph{International
 Journal of Epidemiology}, \textbf{39}(2), 417--420.
 doi:\href{https://doi.org/10.1093/ije/dyp334}{10.1093/ije/dyp334}.
+
+\bibitem[\citeproctext]{ref-cook2002experimental}
+Cook, TD, Campbell, DT, and Shadish, W (2002) \emph{Experimental and
+quasi-experimental designs for generalized causal inference}, Vol. 1195,
+Houghton Mifflin Boston, MA.
 
 \bibitem[\citeproctext]{ref-edwards2015}
 Edwards, JK, Cole, SR, and Westreich, D (2015) All your data are always
