--- a/manuscripts/23-tutorial-don-dags/causal-tutorial-env.qmd
+++ b/manuscripts/23-tutorial-don-dags/causal-tutorial-env.qmd
@@ -1,7 +1,7 @@
 ---
 title: "Causal Inference in Environmental Psychology: Through The Looking Glass of Counterfactual Data Science"
 abstract: |
-  Quantifying causal effects from observational data presents substantial challenges for environmental psychology researchers.  because the correlations obtained from observational settings can be misleading causal guides. However, recent progress in methods for causal inference brings hope for transforming observational data into causal understanding. In this chapter, we provide an accessible introduction to the Potential Outcomes Framework of causal inference and Directed Acyclic Graphs (DAGs), two tools to help researchers better identify when causation is and is not present We conclude with practical guidelines for data collection and modelling, highlighting “tips” and “common pitfalls.” This chapter will interest and utility to environmental psychology researchers  who wish to draw stronger causal inferences from data derived from non-experimental research designs.
+  Quantifying causal effects from observational data presents substantial challenges for environmental psychology researchers because the correlations obtained from observational settings can be misleading causal guides. Recent progress in methods for causal inference brings hope for transforming observational data into causal understanding. In this chapter, we provide an accessible introduction to the Potential Outcomes Framework of causal inference and Directed Acyclic Graphs (DAGs), two tools to help researchers better identify when causation is and is not present. We conclude with practical guidelines for data collection and modelling, highlighting “tips” and “common pitfalls.” This chapter will interest environmental psychology researchers who wish to draw stronger causal inferences from data derived from non-experimental research designs.
 authors: 
   - name: Donald W Hine
     orcid: 0000-0002-3905-7026
@@ -136,10 +136,7 @@ push_mods <-
 
 ## Introduction
 
-Correlation does not imply causation.
-However, quantifying a causal effect requires drawing inferences from correlations present in the data.
-It can be no other way because statistical models produce measures of association, i.e., correlations.
-And to quantify effects we must apply statistical models.
+Causal inference involves using empirical observations to draw conclusions about the causal relationships between variables or events. It typically involves determining whether changes in one or more independent variables are linked to changes in one or more dependent variables, while controlling for potential sources of confounding. The aim of causal inference is to identify cause-effect relationships with a high level of confidence, understanding the mechanisms underlying these relationships, while ruling out plausible alternative explanations [@cook2002experimental]
 
 In experimental settings, quantitative causal inferences from associational models is made possible through randomisation, controlled interventions, and chronologically ordered data collection.
 
