--- a/manuscripts/23-tutorial-don-dags/causal-tutorial-env.qmd
+++ b/manuscripts/23-tutorial-don-dags/causal-tutorial-env.qmd
@@ -1,7 +1,7 @@
 ---
-title: "Causal Inference in Environmental Psychology: Through The Looking Glass of Counterfactual Data Science"
+title: "Causal Inference in Environmental Psychology"
 abstract: |
-  Quantifying causal effects from observational data presents substantial challenges for environmental psychology researchers because the correlations obtained from observational settings can be misleading causal guides. Recent progress in methods for causal inference brings hope for transforming observational data into causal understanding. In this chapter, we provide an accessible introduction to the Potential Outcomes Framework of causal inference and Directed Acyclic Graphs (DAGs), two tools to help researchers better identify when causation is and is not present. We conclude with practical guidelines for data collection and modelling, highlighting “tips” and “common pitfalls.” This chapter will interest environmental psychology researchers who wish to draw stronger causal inferences from data derived from non-experimental research designs.
+  Quantifying causal effects from observational data presents substantial challenges for environmental psychology, however, recent progress in methods for causal inference offers hope. In this chapter, we provide an accessible introduction Causal Diagrams, also known as Directed Acyclic Graphs (DAGs), which are powerful tools for evaluating evidence for causality in observational settings. We start with a conceptual introduction to the basic framework of causal inference within which causal diagrams find there utility. This non-mathematical introduction helps to build intuition for what is needed for obtaining unbiased causal effect estimates. We next offer a primer on how to construct causal diagrams, focussing on the four elemental causal diagrams from which more complicated causal diagrams are built. We conclude with practical guidelines for data collection and modelling, highlighting “tips” and “common pitfalls.” This chapter will interest environmental psychology researchers who wish to draw stronger causal inferences from data derived from non-experimental research designs.
 authors: 
   - name: Donald W Hine
     orcid: 0000-0002-3905-7026
